fix(portfolio-de-pratica.html): refactor HTML structure for better readability and maintainability    feat(styles/style-portfolio.css): add styles for header, header menu, and title destaque for improved visual appeal    refactor(styles/style-portfolio.css): move .titulo-destaque to .apresentacao__conteudo__titulo-destaque for better organization

--- a/styles/style-portfolio.css
+++ b/styles/style-portfolio.css
@@ -11,11 +11,29 @@ body {
     box-sizing: border-box;
 }
 
+.cabecalho {
+    padding: 2% 0% 2% 15%;
+    background-color: #272727;
+}
+
+.cabecalho__menu {
+    display: flex;
+    gap: 80px;
+}
+
+.cabecalho__menu__link {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    text-decoration: none;
+    color: #22D4FD;
+}
+
 .apresentacao {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 8% 15%;
+    margin: 5% 15%;
     width: 75%;
 }
 
@@ -31,6 +49,10 @@ body {
     font-size: 36px;
     font-weight: 400;
     font-style: normal;
+}
+
+.apresentacao__conteudo__titulo-destaque {
+    color: #22D4FD;
 }
 
 .apresentacao__conteudo__texto {
@@ -74,10 +96,6 @@ body {
 .apresentacao__conteudo__botoes__botao:hover {
     background-color: #272727;
     padding: 30px 15px;
-}
-
-.titulo-destaque {
-    color: #22D4FD;
 }
 
 .rodape {
